--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -6,13 +6,14 @@ ARG OPENSSL_VERSION
 ARG APP_VERSION
 ARG PCRE_VERSION
 ARG ZLIB_VERSION
-ARG BUILD_DATE
+ARG UID
+ARG GID
 
 WORKDIR /tmp
 # System setup and dependency installation
 RUN set -e \
     # Create non-root user for security (nginx:nginx)
-    && addgroup --system --gid 101 nginx && adduser --disabled-password --shell /bin/false --ingroup nginx --uid 101 --no-create-home nginx \
+    && addgroup --system --gid "${GID}" nginx && adduser --disabled-password --shell /bin/false --ingroup nginx --uid "${UID}" --no-create-home nginx \
     # Update system and install build dependencies
     && apk -U upgrade && apk add --no-cache \
         gcc=14.2.0-r6 \
@@ -163,7 +164,7 @@ RUN set -e \
     # Security hardening: strip debug symbols and compress binary
     && strip --strip-all /usr/sbin/nginx \
     # Set proper permissions
-    && chown -R nginx:nginx /etc/nginx && chmod -R g+w /etc/nginx \
+    && chown -R "${UID}:${GID}" /etc/nginx && chmod -R g+w /etc/nginx \
     # Verify binary and dependencies
     && file /usr/sbin/nginx && ldd /usr/sbin/nginx || true \
     # Compress binary with UPX (minimal memory overhead)
@@ -174,16 +175,20 @@ RUN set -e \
 
 # Final distroless image
 FROM scratch
+ARG APP_VERSION
+ARG BUILD_DATE
+ARG UID
+ARG GID
 
 # Copy minimal runtime dependencies from builder
 WORKDIR /tmp
 COPY --from=builder /tmp/passwd /tmp/group /tmp/shadow /etc/
 COPY --from=builder /sbin/tini-static /sbin/tini
-COPY --from=builder --chown=nginx:nginx /usr/sbin/nginx /usr/sbin/nginx
-COPY --from=builder --chown=nginx:nginx /etc/nginx /etc/nginx
+COPY --from=builder --chown="${UID}:${GID}" /usr/sbin/nginx /usr/sbin/nginx
+COPY --from=builder --chown="${UID}:${GID}" /etc/nginx /etc/nginx
 # Copy configuration files
-COPY --chown=nginx:nginx ./nginx.conf /etc/nginx/nginx.conf
-COPY --chown=nginx:nginx ./default.conf /etc/nginx/conf.d/default.conf
+COPY --chown="${UID}:${GID}" ./nginx.conf /etc/nginx/nginx.conf
+COPY --chown="${UID}:${GID}" ./default.conf /etc/nginx/conf.d/default.conf
 
 # Use tini as init process for proper signal handling
 ENTRYPOINT [ "/sbin/tini", "--" ]
@@ -212,7 +217,7 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=2 \
 STOPSIGNAL SIGQUIT
 
 # Run as non-root user for security
-USER nginx
+USER "${UID}:${GID}"
 
 # Start NGINX in foreground mode
 CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
