refactor: update default.conf to return JSON response and remove unnecessary root configuration; add example.conf for QUIC and HTTP3 configuration

--- a/default.conf
+++ b/default.conf
@@ -4,7 +4,7 @@ server {
     server_name  localhost;
 
     location / {
-        root   /usr/share/nginx/html;
-        index  index.html index.htm;
+        add_header Content-Type application/json;
+        return 200 '{"STATUS": "OK"}';
     }
 }
