refactor: update default.conf to return JSON response and remove unnecessary root configuration; add example.conf for QUIC and HTTP3 configuration

--- a/.gitattributes
+++ b/.gitattributes
@@ -9,7 +9,7 @@
 # Specific files
 Dockerfile.template linguist-language=Dockerfile linguist-detectable
 # nginx.conf linguist-language=Nginx linguist-detectable
-# nginx_http3.conf linguist-language=Nginx linguist-detectable
+# example.conf linguist-language=Nginx linguist-detectable
 # nginx-seccomp.json linguist-language=JSON linguist-detectable
 # nginx.toml linguist-language=TOML linguist-detectable
 # cosign.pub linguist-language=Text linguist-detectable
