refactor: update default.conf to return JSON response and remove unnecessary root configuration; add example.conf for QUIC and HTTP3 configuration

--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -24,7 +24,7 @@ RUN set -e \
         build-base=0.5-r3 \
         ca-certificates=20251003-r0 \
         linux-headers=6.16.12-r0 \
-        tzdata=2025b-r0 \
+        tzdata=2025c-r0 \
         upx=5.0.2-r0 \
         perl=5.42.0-r0 \
         cmake=4.1.3-r0 \
