--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -29,6 +29,8 @@ RUN set -e \
         upx=5.0.2-r0 \
         perl=5.42.0-r0 \
         cmake=4.1.3-r0 \
+        zstd-dev=1.5.7-r2 \
+        zstd-static=1.5.7-r2 \
     # Update CA certificates for SSL verification
     && update-ca-certificates \
     # Clone NGINX webserver and remove documentation
