--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -239,20 +239,18 @@ jobs:
           COSIGN_KEY: ${{ secrets.COSIGN_KEY }}
           COSIGN_PASSWORD: ${{ secrets.COSIGN_PASSWORD }}
         run: |
-          cosign sign -y --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.DIGEST }} || true
-          cosign sign -y --key env://COSIGN_KEY ammnt/nginx@${{ env.DIGEST }} || true
-          cosign verify --key cosign.pub ghcr.io/ammnt/nginx@${{ env.DIGEST }} || true
-          cosign verify --key cosign.pub ammnt/nginx@${{ env.DIGEST }} || true
+          cosign sign -y --key env://COSIGN_KEY ghcr.io/ammnt/nginx@${{ env.DIGEST }}
+          cosign sign -y --key env://COSIGN_KEY ammnt/nginx@${{ env.DIGEST }}
           docker system prune -f ; rm -rf ${{ github.workspace }}/*
 
-      - name: Deploy to production server🌐
-        uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0
-        with:
-          host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
-          key: ${{ secrets.SERVER_KEY }}
-          port: ${{ secrets.SERVER_PORT }}
-          script: |
-            cd /home/${{ secrets.SERVER_USERNAME }}/agh
-            /usr/bin/docker compose pull web dns
-            /usr/bin/docker compose up -d web dns
+      # - name: Deploy to production server🌐
+      #   uses: appleboy/ssh-action@823bd89e131d8d508129f9443cad5855e9ba96f0
+      #   with:
+      #     host: ${{ secrets.SERVER_HOST }}
+      #     username: ${{ secrets.SERVER_USERNAME }}
+      #     key: ${{ secrets.SERVER_KEY }}
+      #     port: ${{ secrets.SERVER_PORT }}
+      #     script: |
+      #       cd /home/${{ secrets.SERVER_USERNAME }}/agh
+      #       /usr/bin/docker compose pull web dns
+      #       /usr/bin/docker compose up -d web dns
