--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -21,7 +21,6 @@ RUN set -e \
         make=4.4.1-r3 \
         git=2.52.0-r0 \
         mimalloc2-dev=2.2.3-r2 \
-        tini-static=0.19.0-r3 \
         build-base=0.5-r3 \
         ca-certificates=20251003-r0 \
         linux-headers=6.16.12-r0 \
@@ -92,7 +91,6 @@ RUN set -e \
         --with-openssl="/tmp/openssl" \
         --with-openssl-opt="\
             enable-ec_nistp_64_gcc_128 \
-            no-ssl3 \
             no-shared \
             no-weak-ssl-ciphers \
             no-tls-deprecated-ec \
@@ -176,15 +174,11 @@ ARG VCS_REF
 # Copy minimal runtime dependencies from builder
 WORKDIR /tmp
 COPY --from=builder /tmp/passwd /tmp/group /tmp/shadow /etc/
-COPY --from=builder /sbin/tini-static /sbin/tini
 COPY --from=builder --chown="${UID}:${GID}" /usr/sbin/nginx /usr/sbin/nginx
 COPY --from=builder --chown="${UID}:${GID}" /etc/nginx /etc/nginx
 # Copy configuration files
 COPY --chown="${UID}:${GID}" ./nginx.conf /etc/nginx/nginx.conf
 COPY --chown="${UID}:${GID}" ./default.conf /etc/nginx/conf.d/default.conf
-
-# Use tini as init process for proper signal handling
-ENTRYPOINT [ "/sbin/tini", "--" ]
 
 # Expose HTTP, HTTPS, and QUIC ports
 EXPOSE 8080/tcp 8443/tcp 8443/udp
@@ -214,4 +208,4 @@ STOPSIGNAL SIGQUIT
 USER "${UID}:${GID}"
 
 # Start NGINX in foreground mode
-CMD ["/usr/sbin/nginx", "-g", "daemon off;"]
+ENTRYPOINT ["/usr/sbin/angie", "-g", "daemon off;"]
