--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -166,14 +166,14 @@ RUN set -e \
     && make -s -j "$(nproc)" && make -s install && make -s clean \
     # Security hardening: strip debug symbols and compress binary
     && strip --strip-all /usr/sbin/nginx \
-    && upx -q --best --lzma /usr/sbin/nginx && rm -rf /tmp/* \
+    && upx -q --best --lzma /usr/sbin/nginx \
     # Set proper permissions
     && chown -R "${UID}:${GID}" /etc/nginx && chmod -R g+w /etc/nginx \
     # Verify binary and dependencies
     && ldd /usr/sbin/nginx || true \
     && strings /usr/sbin/nginx | grep "zlib-ng" \
     && file /usr/sbin/nginx | grep "statically" \
-    && ls -lash /usr/sbin/nginx \
+    && ls -lash /usr/sbin/nginx && rm -rf /tmp/* \
     && grep -E "(root|nginx)" /etc/passwd > /tmp/passwd \
     && grep -E "(root|nginx)" /etc/group > /tmp/group \
     && grep -E "(root|nginx)" /etc/shadow > /tmp/shadow
